Bug 1417947 - Mark the correct frame as modified when invalidating due to blend mode. r=miko a=gchang